[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycodedoc"
authors = [
    {name = "Alexander Kornyukhin", email = "alexander.kornyukhin@accenture.com"},
]
license = {text = "MIT License"}
description = "Document your Python projects using generative AI"
requires-python = ">=3.9"
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Source = 'https://github.com/WN-Onboarding/pycodedoc_acn'

[project.scripts]
pycodedoc = 'pycodedoc.cli:app'

[tool.setuptools.dynamic]
version = {attr = "pycodedoc.__version__"}
readme = {file=["README.md"], content-type="text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"
